CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4q2
-------------
* Yet more typos
* Fixed so that the new cats scene [Present] option properly activates mpreg for those that have the perk
* Felines now tend to come in bigger groups than before

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4q
------------
* CK took care of a whole bunch of typos
* Added a warning message to the save screen
* Fixed the requirement for Gwendy's Double Dildo scene. You need a cap of 8 instead of 30, so you might need to work your way up a bit first
* New mob added to the Highlands: the catboy mage, written by The Observer. Packs a magical punch
* New mob added to the Highlands: the centauress, written by The Observer. Packs a physical punch
* The regular felines have a new loss scene if you happen across two of them with cocks. Patreon sponsored and written by a new writer, Tala
* The cats have had their capacities slightly expanded, should make those with bigger cocks have an easier time to get it on with them
* I relented and made robes into top-armor slot, so you can now wear pants under your robes

Version 0.4p
------------
* Cassidy indoor sex scenes added. Must be unlocked
* Cassidy sparring sex scenes (win/loss) added. Must be unlocked by first having regular sex
* After your spar, Cass can ask you to model. One off scene
* Cassidy now has a followup to the talk about looks. This will change some scenes slightly. Needs rel > 50 to trigger
* Fixed an error in Cavalcade score evaluation
* Slightly boosted the default girth cap for penetration, which will hopefully fix some stringent NPCs refusing penetration
* Vaughn task 3: you can now trigger the scene by waiting in the inn too
* Fixed a variety of typos etc.

Version 0.4o2
-------------