@@ -10,6 +10,7 @@ Version 0.4q2
 * Yet more typos
 * Fixed so that the new cats scene [Present] option properly activates mpreg for those that have the perk
 * Felines now tend to come in bigger groups than before
+* Miranda has had a bit of a revamp of her talk menu, plus a bunch of typos fixed. Some new topics
 
 --------------------------------------------
              PREVIOUS VERSIONS
